Fix visual bug due to always showing scrollbar

--- a/site/web/app/themes/sd-theme/resources/assets/styles/components/_navbar.scss
+++ b/site/web/app/themes/sd-theme/resources/assets/styles/components/_navbar.scss
@@ -86,7 +86,7 @@ nav.navbar {
       overflow-x: auto;  // Ensure grid doesn't make space for overflow
 
       .overflow-wrapper {
-        overflow-x: scroll; // Permit a scrollbar
+        overflow-x: auto; // Permit a scrollbar
         min-width: min-content;
         padding: 0 $cell-margin;
 
